--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "check-types": "tsc --noemit",
+    "format": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nodemon",
     "dev": "nodemon ./src/server.ts",
-    "build": "tsc",
+    "build": "rimraf ./build && tsc --project tsconfig.json && tsconfig-replace-paths -p tsconfig.json -s ./ -o ./build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
@@ -26,9 +31,23 @@
     "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,ts,json,css,md}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
