--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@prisma/client": "^6.3.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
