--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/socket.io": "^3.0.1",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
@@ -28,7 +29,8 @@
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "node-fetch": "^2.7.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@prisma/client": "^6.3.1",
