--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.782.0",
     "@types/socket.io": "^3.0.1",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
@@ -27,19 +28,21 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.12.0",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.6.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/moment": "^2.11.29",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
@@ -50,7 +53,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.3.1",
+    "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
