--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
+    "chrono-node": "^2.8.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
